--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,6 +16,5 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/feed_item"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
